# pichost

./: .codegraph  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/agents/: plan-validator.md
.claude/commands/: feature-design.md  feature-dev.md  feature-next.md  feature-plan.md
.claude/skills/rust-refactor-fns/: SKILL.md
.claude/skills/rust-refactor-fns/scripts/: find_large_fns.py  find_long_lines.py
.omo/run-continuation/: ses_0b2cd44bcffd92rnIz0wZyLqEH.json  ses_0b2cedd4dffe0Ezcj5bDW6gull.json  ses_0b30337b7ffeiQbrJi0QtMM5YO.json  ses_0b303c0e0ffeUGW4SIFMqeNIp6.json  ses_0b339b81effe3YHx4yxbMcEgSU.json  ses_0b34b4b38ffeTMs6uvKWpQP79z.json
.omo/summary/: summary_and_next.md
.superpowers/sdd/: task-1-brief.md
crates/pichost-api/: Cargo.toml
crates/pichost-api/src/: app.rs  lib.rs  main.rs
crates/pichost-api/src/cache/: mod.rs
crates/pichost-api/src/db/: mod.rs
crates/pichost-api/src/middleware/: auth.rs
crates/pichost-api/src/routes/: auth.rs  images.rs
crates/pichost-api/src/services/: mod.rs  upload.rs
crates/pichost-core/: Cargo.toml
crates/pichost-core/src/: config.rs  error.rs
crates/pichost-core/src/storage/: mod.rs
crates/pichost-core/tests/: storage_test.rs
docs/superpowers/guides/: cdn-setup.md
docs/superpowers/plans/: 2026-07-11-pichost-p0-implementation.md  2026-07-12-pichost-p0-gaps-and-p1-fixes.md  2026-07-12-pichost-p1-async-worker.md  2026-07-12-pichost-p1-storage-infra.md  2026-07-12-pichost-planb-visual-admin.md  2026-07-17-pichost-planb-visual-admin.md  2026-07-18-pichost-p2-bulk-management.md  2026-07-18-pichost-p2-cdn-and-scaling.md  2026-07-18-pichost-p2-gallery-enhancement.md  2026-07-18-pichost-p2-invite-codes.md  2026-07-18-pichost-p2-multifile-upload.md  2026-07-18-pichost-p2-oauth-login.md  2026-07-18-pichost-p2-prometheus-metrics.md  2026-07-18-pichost-p2-storage-quota.md  2026-07-19-p4-a-git-storage.md  2026-07-19-pichost-p3-implementation.md  2026-07-19-pichost-p4b-clipboard-url-upload.md  2026-07-19-pichost-p4c-categories.md  2026-07-19-pichost-p4d-watermark.md
docs/superpowers/specs/: 2026-07-11-pichost-design.md  2026-07-19-pichost-p3-design.md  2026-07-19-pichost-p4-design.md
migrations/: 0001_create_users.sql  0002_create_images.sql  0003_add_image_processing_fields.sql  0004_create_upload_tasks.sql  0005_add_image_search_index.sql  0006_add_storage_quota.sql  0007_create_oauth_accounts.sql  0008_user_storage_configs.sql  0009_create_categories.sql  0010_add_watermark_config.sql
nginx/: nginx.conf
pichost-api/: Cargo.toml
pichost-api/src/: app.rs  lib.rs  main.rs
pichost-api/src/cache/: mod.rs
pichost-api/src/db/: mod.rs
pichost-api/src/metrics/: mod.rs
pichost-api/src/middleware/: auth.rs  metrics.rs  rate_limit.rs
pichost-api/src/routes/: admin.rs  auth.rs  categories.rs  health.rs  images.rs  mod.rs  oauth.rs  storage_configs.rs  users.rs
pichost-api/src/services/: mod.rs  upload.rs  upload_url.rs
pichost-api/tests/: admin_test.rs  category_test.rs  gallery_test.rs  health_test.rs
pichost-core/: Cargo.toml
pichost-core/src/: config.rs  crypto.rs  error.rs  lib.rs  models.rs
pichost-core/src/storage/: git.rs  local.rs  mod.rs  router.rs  s3.rs
pichost-core/tests/: rustfs_test.rs
pichost-worker/: Cargo.toml
pichost-worker/src/: config.rs  fonts.rs  main.rs  pipeline.rs  processor.rs  queue.rs  watermark.rs
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx  theme.css
web-ui/src/api/: client.ts
web-ui/src/components/: AdminRoute.tsx  CategoryTree.tsx  CreateInviteDialog.tsx  DropZone.tsx  EditUserDialog.tsx  Layout.tsx  LinkCard.tsx  NavBar.tsx  ProtectedRoute.tsx  SearchBar.tsx  SortDropdown.tsx  StorageConfigSection.tsx  ThemeToggle.tsx  UploadCard.tsx  UrlUploadInput.tsx  WatermarkSettings.tsx
web-ui/src/components/ui/: Button.tsx  Input.tsx
web-ui/src/hooks/: useClipboardPaste.ts  useUploadQueue.ts
web-ui/src/pages/: Admin.tsx  AdminInvites.tsx  AdminStats.tsx  AdminUsers.tsx  Dashboard.tsx  Gallery.tsx  ImageDetail.tsx  Login.tsx  Register.tsx  Settings.tsx
web-ui/src/pages/admin/: AdminInvites.tsx  AdminStats.tsx  AdminUsers.tsx
web-ui/src/stores/: auth.ts  ui.ts
