[workspace]
members = ["pichost-core", "pichost-api", "pichost-worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
dotenvy = "0.15"
deadpool-redis = "0.15"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
infer = "0.16"
figment = { version = "0.10", features = ["toml", "env"] }
image = { version = "0.25", default-features = false }
webp = "0.2"
