[package]
name = "pichost-api"
version.workspace = true
edition.workspace = true

[dependencies]
pichost-core = { path = "../pichost-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
uuid.workspace = true
chrono.workspace = true
axum.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
tower.workspace = true
tower-http.workspace = true
infer.workspace = true
image = { workspace = true, features = ["png", "jpeg", "gif", "webp"] }
prometheus = "0.13"
lazy_static = "1.5"
oauth2 = "5"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
serde_urlencoded = "0.7"

[[bin]]
name = "pichost-api"
path = "src/main.rs"
