[package]
name = "pichost-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
figment.workspace = true
async-trait = "0.1"
aws-config.workspace = true
aws-sdk-s3.workspace = true
sqlx = { workspace = true, features = ["derive"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }

[lib]
name = "pichost_core"
path = "src/lib.rs"
