[package]
name = "pichost-worker"
version.workspace = true
edition.workspace = true

[dependencies]
pichost-core = { path = "../pichost-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
figment.workspace = true
image = { workspace = true, features = ["png", "jpeg", "gif", "webp", "avif", "bmp"] }
imageproc = "0.25"
rusttype = "0.9"
webp.workspace = true

[[bin]]
name = "pichost-worker"
path = "src/main.rs"
